k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    namespace: blog
    istio-injection: enabled
