k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: blog
    tier: middle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
      tier: middle
  template:
    metadata:
      labels:
        app: blog
        tier: middle
    spec:
      containers:
      - name: django
        image: asia.gcr.io/soe-trial-oota/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
