k8s/base/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: blog
    tier: backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
        tier: backend
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
