k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: blog
    tier: middle
spec:
  type: ClusterIP
  selector:
    app: blog
    tier: middle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
